@@ -109,25 +109,50 @@ class TestCase::Sys::Process {
 
   static method wait : int () {
     
-    my $child_process_id = Sys::Process->fork;
-    
-    # The child process
-    if ($child_process_id == 0) {
-      Sys::Process->exit(0);
+    {
+      my $child_process_id = Sys::Process->fork;
+      
+      # The child process
+      if ($child_process_id == 0) {
+        Sys::Process->exit(0);
+      }
+      
+      unless ($child_process_id > 0) {
+        return 0;
+      }
+      
+      my $status = -1;
+      my $ret_child_process_id = Sys::Process->wait(\$status);
+      
+      unless ($status == 0) {
+        return 0;
+      }
+      unless ($ret_child_process_id > 0) {
+        return 0;
+      }
     }
     
-    unless ($child_process_id > 0) {
-      return 0;
-    }
-    
-    my $status = -1;
-    my $ret_child_process_id = Sys::Process->wait(\$status);
-    
-    unless ($status == 0) {
-      return 0;
-    }
-    unless ($ret_child_process_id > 0) {
-      return 0;
+    {
+      my $child_process_id = Sys::Process->fork;
+      
+      # The child process
+      if ($child_process_id == 0) {
+        Sys::Process->exit(0);
+      }
+      
+      unless ($child_process_id > 0) {
+        return 0;
+      }
+      
+      my $status = -1;
+      my $ret_child_process_id = Sys->wait(\$status);
+      
+      unless ($status == 0) {
+        return 0;
+      }
+      unless ($ret_child_process_id > 0) {
+        return 0;
+      }
     }
     
     return 1;
@@ -135,30 +160,60 @@ class TestCase::Sys::Process {
 
   static method waitpid : int () {
     
-    my $child_process_id = Sys::Process->fork;
-    
-    # The child process
-    if ($child_process_id == 0) {
-      Sys::Process->exit(0);
-    }
-    
-    unless ($child_process_id > 0) {
-      return 0;
-    }
-    
-    my $status = -1;
-
-    my $ret_child_process_id = -1;
-    while (1) {
-      $ret_child_process_id = Sys::Process->waitpid(-1, \$status, PROCESS->WNOHANG);
+    {
+      my $child_process_id = Sys::Process->fork;
       
-      if (Sys::Process->WIFEXITED($status)) {
-        last;
+      # The child process
+      if ($child_process_id == 0) {
+        Sys::Process->exit(0);
+      }
+      
+      unless ($child_process_id > 0) {
+        return 0;
+      }
+      
+      my $status = -1;
+      
+      my $ret_child_process_id = -1;
+      while (1) {
+        $ret_child_process_id = Sys::Process->waitpid(-1, \$status, PROCESS->WNOHANG);
+        
+        if (Sys::Process->WIFEXITED($status)) {
+          last;
+        }
+      }
+      
+      unless ($ret_child_process_id >= 0) {
+        return 0;
       }
     }
-
-    unless ($ret_child_process_id >= 0) {
-      return 0;
+    
+    {
+      my $child_process_id = Sys::Process->fork;
+      
+      # The child process
+      if ($child_process_id == 0) {
+        Sys::Process->exit(0);
+      }
+      
+      unless ($child_process_id > 0) {
+        return 0;
+      }
+      
+      my $status = -1;
+      
+      my $ret_child_process_id = -1;
+      while (1) {
+        $ret_child_process_id = Sys->waitpid(-1, PROCESS->WNOHANG, \$status);
+        
+        if (Sys::Process->WIFEXITED($status)) {
+          last;
+        }
+      }
+      
+      unless ($ret_child_process_id >= 0) {
+        return 0;
+      }
     }
     
     # The status cheking methods
